# C_Structural_Codes

./: CMakeLists.txt  main.c  readme.md
Extra/: GuessTheNumber.c  TicTacToe.c
FirstPartialExamExercises/: Task1.c  Task10.c  Task11.c  Task12.c  Task13.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c  Task7.c  Task8.c  Task9.c
Lab1/: Task1.c  Task2.c  Task3.c  Task4.c  Task5.c
Lab2/: Task1.c  Task2.c  Task3.c  Task4.c
Lab3/: Task1.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c
Lab4/: Task1.c  Task2.c  Task3.c
Lab5/: Task1.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c  Task7.c
Lab6/: Task1.c  Task10.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c  Task7.c  Task8.c  Task9.c
Lab7/: Task1.c  Task2.c
Lab8/: Task1.c  Task2.c  Task3.c  Task4.c
SecondPartialExamExercises/: Task1.c  Task10.c  Task11.c  Task12.c  Task13.c  Task14.c  Task15.c  Task16.c  Task17.c  Task18.c  Task19.c  Task2.c  Task20.c  Task21.c  Task22.c  Task23.c  Task24.c  Task25.c  Task26.c  Task27.c  Task28.c  Task29.c  Task3.c  Task30.c  Task31.c  Task32.c  Task33.c  Task34.c  Task4.c  Task5.c  Task6.c  Task7.c  Task8.c  Task9.c
Structures(2ndSemester)/FirstPartialExam/: Task1.c
Structures(2ndSemester)/Lab1/: Task1.c  Task2.c  Task3.c
Structures(2ndSemester)/PartialExamExercises/: Task21.c  Task26.c  Task27.c  Task28.c  Task8.c  Task9.c
