cmake_minimum_required(VERSION 3.21)
project(Strucutral_Programming_Codes C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(Lab1_Task1 "Lab1/Task1.c")
add_executable(Lab1_Task2 "Lab1/Task2.c")
add_executable(Lab1_Task3 "Lab1/Task3.c")
add_executable(Lab1_Task4 "Lab1/Task4.c")
add_executable(Lab1_Task5 "Lab1/Task5.c")
add_executable(Lab2_Task1 Lab2/Task1.c)
add_executable(Lab2_Task2 Lab2/Task2.c)
add_executable(Lab2_Task3 Lab2/Task3.c)
add_executable(Lab2_Task4 Lab2/Task4.c)
add_executable(Lab3_Task1 Lab3/Task1.c)
add_executable(Lab3_Task2 Lab3/Task2.c)
add_executable(Lab3_Task4 Lab3/Task4.c)
add_executable(Lab3_Task5 Lab3/Task5.c)
add_executable(Lab3_Task6 Lab3/Task6.c)
add_executable(Lab4_Task1 Lab4/Task1.c)
add_executable(Lab4_Task2 Lab4/Task2.c)
add_executable(Lab5_Task1 Lab5/Task1.c)
add_executable(Lab5_Task2 Lab5/Task2.c)
add_executable(Lab5_Task3 Lab5/Task3.c)
add_executable(Lab5_Task4 Lab5/Task4.c)
add_executable(Lab5_Task5 Lab5/Task5.c)
add_executable(Lab5_Task7 Lab5/Task7.c)
add_executable(Lab6_Task1 Lab6/Task1.c)
add_executable(Lab6_Task2 Lab6/Task2.c)
add_executable(Lab6_Task3 Lab6/Task3.c)
add_executable(Lab6_Task4 Lab6/Task4.c)
add_executable(Lab6_Task5 Lab6/Task5.c)
add_executable(Lab6_Task6 Lab6/Task6.c)
add_executable(Lab6_Task7 Lab6/Task7.c)
add_executable(Lab6_Task9 Lab6/Task9.c)
add_executable(Lab6_Task10 Lab6/Task10.c)
add_executable(Lab7_Task1 Lab7/Task1.c)
add_executable(Lab7_Task2 Lab7/Task2.c)
add_executable(Lab8_Task1 Lab8/Task1.c)
add_executable(Lab8_Task2 Lab8/Task2.c)
add_executable(Lab8_Task3 Lab8/Task3.c)
add_executable(Lab8_Task4 Lab8/Task4.c)
add_executable(Lab4_Task3 Lab4/Task3.c)
add_executable(Lab6_Task8 Lab6/Task8.c)
add_executable(Lab5_Task6 Lab5/Task6.c)
add_executable(Lab3_Task3 Lab3/Task3.c)
add_executable(FirstPartialExamExercises_Task1 FirstPartialExamExercises/Task1.c)
add_executable(FirstPartialExamExercises_Task2 FirstPartialExamExercises/Task2.c)
add_executable(FirstPartialExamExercises_Task3 FirstPartialExamExercises/Task3.c)
add_executable(FirstPartialExamExercises_Task4 FirstPartialExamExercises/Task4.c)
add_executable(FirstPartialExamExercises_Task5 FirstPartialExamExercises/Task5.c)
add_executable(FirstPartialExamExercises_Task6 FirstPartialExamExercises/Task6.c)
add_executable(FirstPartialExamExercises_Task7 FirstPartialExamExercises/Task7.c)
add_executable(FirstPartialExamExercises_Task8 FirstPartialExamExercises/Task8.c)
add_executable(FirstPartialExamExercises_Task9 FirstPartialExamExercises/Task9.c)
add_executable(FirstPartialExamExercises_Task10 FirstPartialExamExercises/Task10.c)
add_executable(FirstPartialExamExercises_Task11 FirstPartialExamExercises/Task11.c)
add_executable(FirstPartialExamExercises_Task12 FirstPartialExamExercises/Task12.c)
add_executable(FirstPartialExamExercises_Task13 FirstPartialExamExercises/Task13.c)
add_executable(SecondPartialExamExercises_Task1 SecondPartialExamExercises/Task1.c)
add_executable(SecondPartialExamExercises_Task2 SecondPartialExamExercises/Task2.c)
add_executable(SecondPartialExamExercises_Task3 SecondPartialExamExercises/Task3.c)
add_executable(SecondPartialExamExercises_Task4 SecondPartialExamExercises/Task4.c)
add_executable(SecondPartialExamExercises_Task5 SecondPartialExamExercises/Task5.c)
add_executable(SecondPartialExamExercises_Task6 SecondPartialExamExercises/Task6.c)
add_executable(SecondPartialExamExercises_Task7 SecondPartialExamExercises/Task7.c)
add_executable(SecondPartialExamExercises_Task8 SecondPartialExamExercises/Task8.c)
add_executable(SecondPartialExamExercises_Task9 SecondPartialExamExercises/Task9.c)
add_executable(SecondPartialExamExercises_Task10 SecondPartialExamExercises/Task10.c)
add_executable(SecondPartialExamExercises_Task11 SecondPartialExamExercises/Task11.c)
add_executable(SecondPartialExamExercises_Task12 SecondPartialExamExercises/Task12.c)
add_executable(SecondPartialExamExercises_Task13 SecondPartialExamExercises/Task13.c)
add_executable(SecondPartialExamExercises_Task14 SecondPartialExamExercises/Task14.c)
add_executable(SecondPartialExamExercises_Task15 SecondPartialExamExercises/Task15.c)
add_executable(SecondPartialExamExercises_Task16 SecondPartialExamExercises/Task16.c)
add_executable(SecondPartialExamExercises_Task17 SecondPartialExamExercises/Task17.c)
add_executable(SecondPartialExamExercises_Task18 SecondPartialExamExercises/Task18.c)
add_executable(SecondPartialExamExercises_Task19 SecondPartialExamExercises/Task19.c)
add_executable(SecondPartialExamExercises_Task20 SecondPartialExamExercises/Task20.c)
add_executable(SecondPartialExamExercises_Task21 SecondPartialExamExercises/Task21.c)
add_executable(SecondPartialExamExercises_Task22 SecondPartialExamExercises/Task22.c)
add_executable(SecondPartialExamExercises_Task23 SecondPartialExamExercises/Task23.c)
add_executable(SecondPartialExamExercises_Task24 SecondPartialExamExercises/Task24.c)
add_executable(SecondPartialExamExercises_Task25 SecondPartialExamExercises/Task25.c)
add_executable(SecondPartialExamExercises_Task26 SecondPartialExamExercises/Task26.c)
add_executable(SecondPartialExamExercises_Task27 SecondPartialExamExercises/Task27.c)
add_executable(SecondPartialExamExercises_Task28 SecondPartialExamExercises/Task28.c)
add_executable(SecondPartialExamExercises_Task29 SecondPartialExamExercises/Task29.c)
add_executable(SecondPartialExamExercises_Task30 SecondPartialExamExercises/Task30.c)
add_executable(SecondPartialExamExercises_Task31 SecondPartialExamExercises/Task31.c)
add_executable(SecondPartialExamExercises_Task32 SecondPartialExamExercises/Task32.c)
add_executable(SecondPartialExamExercises_Task33 SecondPartialExamExercises/Task33.c)
add_executable(SecondPartialExamExercises_Task34 SecondPartialExamExercises/Task34.c)
add_executable(Extra_TicTacToe Extra/TicTacToe.c)
add_executable(Extra_GuessTheNumber Extra/GuessTheNumber.c)
add_executable(Structures_Lab1_Task1 "Structures(2ndSemester)/Lab1/Task1.c")
add_executable(Structures_Lab1_Task2 "Structures(2ndSemester)/Lab1/Task2.c")
add_executable(Structures_Lab1_Task3 "Structures(2ndSemester)/Lab1/Task3.c")
add_executable(Structures_PartialExamExercises_Task8 "Structures(2ndSemester)/PartialExamExercises/Task8.c")
add_executable(Structures_PartialExamExercises_Task9 "Structures(2ndSemester)/PartialExamExercises/Task9.c")
add_executable(Structures_PartialExamExercises_Task21 "Structures(2ndSemester)/PartialExamExercises/Task21.c")
add_executable(Structures_PartialExamExercises_Task26 "Structures(2ndSemester)/PartialExamExercises/Task26.c")
add_executable(Structures_PartialExamExercises_Task27 "Structures(2ndSemester)/PartialExamExercises/Task27.c")
add_executable(Structures_PartialExamExercises_Task28 "Structures(2ndSemester)/PartialExamExercises/Task28.c")
add_executable(FirstPartialExam_Task1 "Structures(2ndSemester)/FirstPartialExam/Task1.c")